Bug 154775 - Part of document missing when opened from an email
Summary: Part of document missing when opened from an email
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.6.0 target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Tables
  Show dependency treegraph
 
Reported: 2023-04-12 16:06 UTC by Mark Findlay
Modified: 2023-09-28 18:59 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Word document with table not shown properly (395.50 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-04-12 16:08 UTC, Mark Findlay
Details
screenshot (428.66 KB, image/png)
2023-05-12 04:29 UTC, BogdanB
Details
screenshot (432.55 KB, image/png)
2023-09-28 18:59 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Findlay 2023-04-12 16:06:41 UTC
Description:
I am opening a document attached to an email from Apple Mail on a Mac computer running Ventura. It looks like I'm using LibreOffice 7.4 on my Mac Mini (M2 version). 

The document is in format .docx, but when saved in .odt, the problem persists. It contains two tables, but the second table only shows two rows; the remainder of the table is missing. Crucially, when opened on my phone using Office, it seems to open correctly; the entire tables are both visible. So the data isn't being shown. Exporting the document to a .PDF, the problem persists again.

Steps to Reproduce:
1. Open the document from email
2.
3.

Actual Results:
Document has the first page showing the first table, but the second table only has the first two rows; it should show on the second page but doesn.t

Expected Results:
The whole document should be readable.


Reproducible: Always


User Profile Reset: No

Additional Info:
I don't know how to send you the document for your inspection. Also the version just says 7.4 . I can't tell the subversion.
Comment 1 Mark Findlay 2023-04-12 16:08:00 UTC
Created attachment 186624 [details]
Word document with table not shown properly
Comment 2 m_a_riosv 2023-04-13 01:45:35 UTC
Reproducible
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f22f7159ec1bd28d19f4a8b431893436419ecd64
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo


Going to any cell in the second table, and with Menu/Table/Select/Table, shows as if the table is on the second page somewhere on the right hand side of the page.
Comment 3 BogdanB 2023-04-13 04:01:13 UTC
Also in
Version: 7.5.0.1.0+ (X86_64) / LibreOffice Community
Build ID: f29b2b5b7a86fa813ec0410f2788cd9580c7e0b2
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 csyu.279 2023-04-20 01:36:47 UTC
Regression found:

https://git.libreoffice.org/core/+/fd7749fddc5a767461dfced55369af48e5a6d561%5E%21

commit fd7749fddc5a767461dfced55369af48e5a6d561	[log]
author	Miklos Vajna <vmiklos@collabora.com>	Fri Feb 14 16:29:44 2020 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	
tree 0a89f95af653d467958c008102a3126242a8d6b0
parent 10e08b1d398e6aa91aa4ced0ca6c966349be8b5d [diff]


Bibisected with: bibisect-win64-7.0

Adding Cc: to Miklos Vajna
Comment 5 Commit Notification 2023-05-11 07:34:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1b5bc2ae2f19a190bf588a5a26c4d125c3960991

tdf#154775 sw layout: fix unexpected large table print area left margin

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2023-05-12 04:29:14 UTC
Created attachment 187219 [details]
screenshot

Still an issue on latest master

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ca3bfa9bded6103d4d172ace486b697beeb191be
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2023-08-24 10:44:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7b1c03ed87f7a21606e09863b23074e6b96e26d1

tdf#154775 sw: layout: avoid breaking this with following commits

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-09-26 11:38:38 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/decade708924e8dbc416893734d2273fcc657dcf

tdf#154775 sw: layout: avoid breaking this with following commits

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 BogdanB 2023-09-28 18:59:44 UTC
Created attachment 189873 [details]
screenshot

Thanks, Miklos and Michael.

Fixed in 24.2
Verified with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bbe4d3498c2f994342b4d213f0ae874e7b0b7775
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Was bad in 7.5 (screenshot for reference)
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded