sw/source/core/layout/tabfrm.cxx
@@ -3072,9 +3072,12 @@ bool SwTabFrame::CalcFlyOffsets( SwTwips& rUpper,
                 //   text frame has already changed its page.
                 const SwTextFrame* pAnchorCharFrame = pFly->FindAnchorCharFrame();
                 const SwFormatHoriOrient& rHori= pFly->GetFormat()->GetHoriOrient();
+                // TODO: why not just ignore HoriOrient?
+                bool isHoriOrientShiftDown =
+                       rHori.GetHoriOrient() == text::HoriOrientation::NONE
+                    || rHori.GetHoriOrient() == text::HoriOrientation::LEFT;
                 // Only consider invalid Writer fly frames if they'll be shifted down.
-                bool bIgnoreFlyValidity
-                    = bAddVerticalFlyOffsets && rHori.GetHoriOrient() == text::HoriOrientation::NONE;
+                bool bIgnoreFlyValidity = bAddVerticalFlyOffsets && isHoriOrientShiftDown;
                 bool bConsiderFly =
                     // #i46807# - do not consider invalid
                     // Writer fly frames.
@@ -3134,8 +3137,7 @@ bool SwTabFrame::CalcFlyOffsets( SwTwips& rUpper,
                     bool bShiftDown = css::text::WrapTextMode_NONE == nSurround;
                     if (!bShiftDown && bAddVerticalFlyOffsets)
                     {
-                        if (nSurround == text::WrapTextMode_PARALLEL
-                            && rHori.GetHoriOrient() == text::HoriOrientation::NONE)
+                        if (nSurround == text::WrapTextMode_PARALLEL && isHoriOrientShiftDown)
                         {
                             // We know that wrapping was requested and the table frame overlaps with
                             // the fly frame. Check if the print area overlaps with the fly frame as
@@ -3196,7 +3198,8 @@ bool SwTabFrame::CalcFlyOffsets( SwTwips& rUpper,
                     }
                     if ((css::text::WrapTextMode_RIGHT == nSurround
                          || css::text::WrapTextMode_PARALLEL == nSurround) &&
-                         text::HoriOrientation::LEFT == rHori.GetHoriOrient() )
+                         text::HoriOrientation::LEFT == rHori.GetHoriOrient() &&
+                         !bShiftDown )
                     {
                         const tools::Long nWidth = aRectFnSet.XDiff(
                             aRectFnSet.GetRight(aFlyRect),
